bk_ida/gccida/c1/doing_eh
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/doing_eh/src/except.c:846:8: error: use of undeclared identifier 'doing_eh_warned'
if ( ( doing_eh_warned & 1) == 0 ) 
       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/doing_eh/src/except.c:850:1: error: use of undeclared identifier 'doing_eh_warned'
doing_eh_warned = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/doing_eh/src/obj/except.o] Error 1
